Fixed issue w/ horizontal scrollbars appearing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ a:active {
 /* header at top of page */
 header {
     margin: 20px auto;
-    width: 100vw;
+    width: 100%;
     background-color: black;
     color: yellow;
 }
@@ -54,7 +54,7 @@ h1 {
     font-size: 3rem;
 }
 header>nav {
-    width: 100vw;
+    width: 100%;
     background-color: var(--accent-color);
 }
 header ul {
@@ -79,7 +79,7 @@ header ul a:active {
 /* hero logo and catch phrase */
 section.hero {
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 300px; 
     background-color: rgb(100, 100, 24);
     margin: 20px 0 20px 0;
@@ -101,7 +101,7 @@ section.hero h2 {
     z-index: 1;
     font-size: 1.66rem;
     font-weight: 500;
-    width: 100%;
+    width: 50%;
     padding: 3px 0px 3px 10px;
 }
 
